# svc-atc

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose-base.yml  docker-compose.yml  log4rs.yaml
.make/: rust.mk
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml
client-rest/examples/: rest.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
server/: Cargo.toml  README.md
server/src/: config.rs  lib.rs  main.rs
server/src/common/: macros.rs  mod.rs
server/src/common/plan/: mod.rs  qgc.rs
server/src/grpc/: client.rs  server.rs
server/src/rest/: api.rs  macros.rs  mod.rs  server.rs
