[package]
description = "Types used to communicate with the REST API of svc-atc."
keywords    = ["vtol", "client", "rest", "atc"]                         # max 5
name        = "svc-atc-client-rest"
version     = "0.1.1-develop.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
serde      = "1.0"
serde_json = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "latest-develop"

[[example]]
name = "rest"
