[package]
description = "Arrow air traffic control service GRPC server"
name        = "svc-atc"
version     = "0.0.2-develop.1"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-storage-client-grpc/mock"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  "svc-storage-client-grpc/stub_client",
  "svc-storage-client-grpc/stub_backends",
]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
# Must pin in R3 due to old rust version
anstyle     = "=1.0.0"
anyhow      = "1.0"
axum        = "0.6"
cargo-husky = "1"
chrono      = { version = "0.4", features = ["serde"] }
# Must pin in R3 due to old rust version
clap         = { version = "=4.3.24", features = ["derive"] }
clap_lex     = "=0.5.0"
config       = "0.13"
dotenv       = "0.15"
futures      = "0.3"
hyper        = "0.14"
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.28", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.8"
tower        = { version = "0.4", features = ["limit"] }
tower-http   = { version = "0.4", features = ["cors", "trace"] }
utoipa       = { version = "3.3", features = ["axum_extras", "chrono"] }

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common.git"
tag = "v0.2.0"

[dependencies.svc-storage-client-grpc]
features = ["flight_plan"]
git      = "https://github.com/Arrow-air/svc-storage"
tag      = "v0.11.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-atc]
features = ["dev"]
path     = "."
